np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: secured-np
  namespace: secured-apps
spec:
  podSelector:
    matchLabels:
      app-tier: UI
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: secured-apps
    - podSelector:
        matchLabels:
          allowed-pod: yes-allowed 
    ports:
    - protocol: TCP
      port: 80
